array.c (rb_ary_zip): take only as many as needed from an Enumerator (#4389)

[Bug #17814]